Fix videowrapper on mobile

--- a/_sass/widgets/_video.scss
+++ b/_sass/widgets/_video.scss
@@ -1,16 +1,28 @@
 .videowrapper {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
-	height: 0;
-	margin-left: auto;
-	margin-right: auto;
+	width: 100%;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 
 .videowrapper iframe {
-  margin-left: auto;
-  margin-right: auto;
-	position: absolute;
-	width: 100%;
-	height: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
+@media all and (max-width: 660px) {
+	.videowrapper {
+		position: relative;
+		padding-bottom: 56.25%;
+		padding-top: 25px;
+		height: 0;
+		margin-top: 0;
+		margin-bottom: 50px;
+	}
+
+	.videowrapper iframe {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+	}
 }
